<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.QuestionActivity">

    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:background="@color/purple_200"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:background="@color/purple_200"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_weight="3"
            android:background="@drawable/custom_background_tablayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tabLayout1"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/custom_click_backgound_tablayout"
                android:gravity="center"
                android:text="@string/tv_all"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tabLayout2"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_not_study"
                android:textColor="#BFFFFFFF"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/tabLayout3"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tv_wrong_question"
                android:textColor="#BFFFFFFF"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <ImageView
            android:id="@+id/ic_search"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="10dp"
            android:background="@color/purple_200"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_search" />

    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainView"
        android:name="com.example.learndriver.ui.fragment.AllQuestionFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_bot"
        android:layout_below="@id/layout_top" />

    <LinearLayout
        android:id="@+id/layout_bot"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_200"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="4.5">

        <ImageView
            android:id="@+id/ic_back_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_back_question"
            android:visibility="gone" />

        <View
            android:id="@+id/view_space"
            android:layout_width="0dp"
            android:visibility="visible"
            android:layout_height="wrap_content"
            android:layout_weight="1.8" />

        <LinearLayout
            android:id="@+id/layout_show_all_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/tv_question"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_current_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="2dp"
                android:text="@string/tv_current_question"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_character"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_total_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/tv_question_total"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ic_next_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_next_question" />

        <View
            android:layout_width="2dp"
            android:layout_height="45dp"
            android:background="@color/white" />

        <ImageView
            android:id="@+id/ic_star"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_star"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

</RelativeLayout>