<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4">


    <LinearLayout
        android:id="@+id/layout_top"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/purple_200"
        android:gravity="center_vertical|center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ic_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@color/purple_200"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_back" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/ic_clock"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@color/purple_200"
                android:importantForAccessibility="no"
                android:src="@drawable/ic_clock"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/tv_exam_test"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ic_tip"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@color/purple_200"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_what" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_half"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_top">

        <TableLayout
            android:id="@+id/table_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:stretchColumns="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:id="@+id/table_row_1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/ic_random"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_table_row"
                    android:src="@drawable/ic_random"
                    android:contentDescription="@string/tv_contentdescription" />

                <TextView
                    android:id="@+id/tv_exam1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_table_row"
                    android:gravity="center"
                    android:text="@string/tv_pass1"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_exam2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_table_row"
                    android:gravity="center"
                    android:text="@string/tv_pass2"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_exam3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_table_row"
                    android:gravity="center"
                    android:padding="21dp"
                    android:text="@string/tv_pass3"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_exam4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_table_row"
                    android:gravity="center"
                    android:text="@string/tv_pass4"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_exam5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_table_row"
                    android:gravity="center"
                    android:text="@string/tv_pass5"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
