<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.QuestionActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPage_topic_question"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_bot" />

    <LinearLayout
        android:id="@+id/layout_bot"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@color/purple_200"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="4.5">

        <ImageView
            android:id="@+id/ic_back_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_back_question"
            android:visibility="gone" />

        <View
            android:id="@+id/view_space"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/layout_show_all_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:text="@string/tv_question"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/tv_current_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="2dp"
                android:text="@string/tv_current_question"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_character"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_total_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/tv_question_total"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>

        <ImageView
            android:id="@+id/ic_next_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.8"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_next_question" />

        <View
            android:layout_width="2dp"
            android:layout_height="45dp"
            android:background="@color/white" />

        <ImageView
            android:id="@+id/ic_star"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_star"
            tools:ignore="ImageContrastCheck" />

    </LinearLayout>

</RelativeLayout>